// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> renders an <img> 1`] = `
Array [
  <img
    alt=""
    id="#"
    onClick={[MockFunction]}
    src="folderName/fileName.ext"
  />,
]
`;

exports[`<Item /> renders an <img> 2`] = `
Array [
  <img
    alt=""
    id="##"
    onClick={[MockFunction]}
    src="folderName/fileName.ext"
  />,
]
`;
